data/derived/fa15/progs/unify/prog2971.ml.out
Characters 76-80:
  | [h ::tail ]-> listReverse tail;;
                              ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a list list
       The type variable 'a occurs inside 'a list
